클러스터 구현 완료

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <script type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4de84af4a9fea12a53f285c0e0acfc99&services"></script>
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4de84af4a9fea12a53f285c0e0acfc99&libraries=services,clusterer"></script>
   <title>React App</title>
 </head>
 
